# Recon-Framework

./: .gitignore  LICENSE  README.md  config.example.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/: __init__.py  app.py
api/routes/: __init__.py  scan.py
core/: __init__.py  checkpoint.py  exceptions.py  tool_manager.py
dashboard/: __init__.py
dashboard/templates/: index.html  target.html
docs/: usage.md
intelligence/: __init__.py  analyzer.py  attack_vectors.py
monitoring/: __init__.py
notifications/: __init__.py  dispatcher.py
output/: __init__.py  writer.py
output/mithaq.life/: all_urls.txt  attack_plan.md  live_hosts.json  ports.json  subdomains.txt
recon/: __init__.py  crawler.py  js_analyzer.py  pipeline.py  subdomain_enum.py  url_collection.py  url_discovery.py  vuln_scanner.py  wordpress.py
tests/integration/: test_pipeline_smoke.py
tests/unit/: test_exceptions.py
