[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "recon-framework"
version = "0.1.0"
description = "Modular reconnaissance automation framework for bug bounty and ethical hacking."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "Hesham Ali" }
]
keywords = ["recon", "bug-bounty", "security", "automation", "osint"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "flask>=3.0.0",
  "flask-socketio>=5.3.6",
  "flask-cors>=4.0.0",
  "gevent>=23.9.1",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.3",
  "APScheduler>=3.10.4",
  "rich>=13.7.1",
  "tqdm>=4.66.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
recon = "main:main"

[project.urls]
Repository = "https://github.com/your-handle/recon-framework"
Documentation = "https://github.com/your-handle/recon-framework/blob/main/docs/usage.md"
"Bug Tracker" = "https://github.com/your-handle/recon-framework/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "data*", "output*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["data/", "output/"]
